# feetech_scs_ros2_driver

feetech_scs/: CMakeLists.txt  package.xml
feetech_scs/include/feetech_scs/: INST.h  SCSerial.h
feetech_scs/src/: feetech_scs.cpp
feetech_scs/src/scs/: SCS.cpp  SCSCL.cpp  SCSerial.cpp
